prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/type_inference/test_class_literal.diag.txt
ERROR: expression of type 'class' cannot be assigned to type 'string'
testData/diagnostics/compilation_errors/type_inference/test_class_literal.nut:2:0

// EXPECTED: compile-time error - class literal assigned to string variable
local x: string = class {
^
    a = 1


